--- a/app/globals.css
+++ b/app/globals.css
@@ -19,8 +19,54 @@
   }
 }
 
+@layer utilities {
+  @keyframes border-beam {
+    from { offset-distance: 0%; }
+    to { offset-distance: 100%; }
+  }
+
+  .animate-border-beam {
+    /* Menentukan jalur melingkar sesuai bentuk tombol */
+    offset-path: rect(0% auto 100% auto round 9999px);
+    animation: border-beam 4s linear infinite;
+  }
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+canvas {
+  cursor: crosshair;
+}
+
+@keyframes aurora-flow {
+  0% { background-position: 0% 50%; }
+  100% { background-position: 100% 50%; }
+}
+
+.animate-aurora-flow {
+  animation: aurora-flow 15s linear infinite;
+  background-size: 200% 100%;
+}
+
+/* @layer utilities {
+  .animate-spin-slow {
+    animation: spin 15s linear infinite;
+  }
+  
+  .animate-spin-reverse {
+    animation: spin 20s linear infinite reverse;
+  }
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+} */
